--- a/config/quality/detekt.gradle
+++ b/config/quality/detekt.gradle
@@ -3,7 +3,7 @@ configurations {
 }
 
 dependencies {
-    detekt libraries.quality.detekt
+    detekt Deps.quality.detekt
 }
 
 task detekt(type: JavaExec) {
