--- a/libraries/navigation/build.gradle
+++ b/libraries/navigation/build.gradle
@@ -2,6 +2,6 @@ apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
 dependencies {
-    implementation libraries.android.navigation.fragment
-    implementation libraries.android.navigation.ui
+    implementation Deps.android.navigation.fragment
+    implementation Deps.android.navigation.ui
 }
