--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -5,9 +5,9 @@ dependencies {
     implementation project(":libraries:core")
     implementation project(":data:model")
 
-    implementation libraries.koin.core
-    implementation libraries.android.room.runtime
-    implementation libraries.android.room.rx
-    kapt libraries.android.room.compiler
-    implementation libraries.rx.java
+    implementation Deps.koin.core
+    implementation Deps.android.room.runtime
+    implementation Deps.android.room.rx
+    kapt Deps.android.room.compiler
+    implementation Deps.rx.java
 }
