--- a/libraries/core/build.gradle
+++ b/libraries/core/build.gradle
@@ -9,15 +9,15 @@ android {
 }
 
 dependencies {
-    implementation libraries.android.appCompat
-    implementation libraries.android.recyclerView
-    implementation libraries.android.material
-    implementation libraries.android.ktx
-    implementation libraries.android.navigation.fragment
-    implementation libraries.android.navigation.ui
+    implementation Deps.android.appCompat
+    implementation Deps.android.recyclerView
+    implementation Deps.android.material
+    implementation Deps.android.ktx
+    implementation Deps.android.navigation.fragment
+    implementation Deps.android.navigation.ui
 
-    implementation libraries.rx.android
-    implementation libraries.rx.java
+    implementation Deps.rx.android
+    implementation Deps.rx.java
 
-    implementation libraries.koin.viewModel
+    implementation Deps.koin.viewModel
 }
