:white_check_mark: Create tests for TaskNotificationScheduler
Test created

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -32,3 +32,4 @@ test-pattern:
     - 'TooManyFunctions'
     - 'UnsafeCast'
     - 'UnderscoresInNumericLiterals'
+    - 'UnsafeCallOnNullableType'
