--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include ':features:alarm'
 include ':features:task'
 include ':features:category'
 include ':features:preference'
+include ':features:tracker'
 include ':data:model'
 include ':data:local'
 include ':data:domain'
