--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"
             tools:ignore="UnusedAttribute">
+
+            <nav-graph android:value="@navigation/nav_graph_tracker" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
