:sparkles: Create Feature Installer module
Create a module to handle the dynamic feature installation

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ include ':app'
 include ':libraries:core'
 include ':libraries:test'
 include ':libraries:navigation'
+include ':libraries:splitInstall'
 include ':features:alarm'
 include ':features:task'
 include ':features:category'
