--- a/libraries/splitInstall/build.gradle
+++ b/libraries/splitInstall/build.gradle
@@ -1,1 +1,5 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
+
+dependencies {
+    implementation Deps.android.playCore
+}
