:arrow_up: Update Ktlint version
Ktlint version updated to latest stable
Imports order updated using `ktlintFormat` task once the IntelliJ
settings does not support it automatically

--- a/config/quality/ktlint.gradle
+++ b/config/quality/ktlint.gradle
@@ -17,7 +17,7 @@ task ktlint(type: JavaExec, group: "verification") {
 task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
-    main = "com.github.shyiko.ktlint.Main"
+    main = "com.pinterest.ktlint.Main"
     args "-F", "src/**/*.kt"
 }
 
