:bug: Fix Lint not running on Library modules
Lint was not running on Library modules. The correct setup is running
Lint only on Application Module and set `checkDependencies` to true.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,16 @@ android {
         versionName Releases.versionName
     }
 
+    lintOptions {
+        warningsAsErrors true
+        abortOnError true
+        htmlReport true
+        checkDependencies true
+
+        lintConfig file("${rootDir}/config/filters/lint.xml")
+        htmlOutput file("${buildDir}/reports/lint.html")
+    }
+
     dataBinding {
         enabled = true
     }
