:sparkles: Create initial Split Install DSL implementation
Create installation flow using split install for dynamic features
Confirmation and loading dialog created
New strings added

--- a/libraries/splitInstall/build.gradle
+++ b/libraries/splitInstall/build.gradle
@@ -1,5 +1,9 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 
 dependencies {
+    implementation project(":libraries:core")
+
+    implementation Deps.android.appCompat
+    implementation Deps.android.constraintLayout
     implementation Deps.android.playCore
 }
