:card_file_box: Update Database to export schema
Database schema update to be exported. This change will allow
migration and general database tests.

--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -1,6 +1,21 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 apply plugin: "kotlin-kapt"
 
+android {
+    defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
+    }
+
+    sourceSets {
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+    }
+}
+
 dependencies {
     implementation project(":libraries:core")
     implementation project(":data:model")
