--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -5,12 +5,10 @@ android {
     defaultConfig {
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = ["room.schemaLocation":
-                                     "$projectDir/schemas".toString()]
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
     }
-
     sourceSets {
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
@@ -25,4 +23,7 @@ dependencies {
     implementation Deps.android.room.rx
     kapt Deps.android.room.compiler
     implementation Deps.rx.java
+
+    androidTestImplementation Deps.test.runner
+    androidTestImplementation Deps.test.room
 }
