:sparkles: Create core test module
Module created to support test in other modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include ':app'
 include ':libraries:core'
+include ':libraries:test'
 include ':libraries:navigation'
 include ':features:alarm'
 include ':features:task'
