:white_check_mark: Adding tests for new use cases
Test cases added for Complete, Uncomplete and UpdateTaskStatus use cases

--- a/data/domain/build.gradle
+++ b/data/domain/build.gradle
@@ -11,7 +11,12 @@ dependencies {
     implementation project(":data:local")
     implementation project(":data:model")
 
+    testImplementation project(':libraries:test')
+
     implementation Deps.koin.core
     implementation Deps.rx.java
     implementation Deps.rx.android
+
+    testImplementation Deps.test.junit
+    testImplementation Deps.test.mockk
 }
