:recycle: Refactor obfuscation strategy
Instead of having a file exclusively for obfuscation, it was added
directly on the main app gradle and for the features one, once they
are different. This may reduce the complexity.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: "com.android.application"
 
 apply from: "$rootDir/config/dependencies/android_dependencies.gradle"
-apply from: "$rootDir/config/dependencies/obfuscation_dependencies.gradle"
 apply from: "$rootDir/config/artifacts.gradle"
 
 apply plugin: "kotlin-kapt"
@@ -12,6 +11,13 @@ android {
         applicationId "com.escodro.alkaa"
         versionCode Releases.versionCode
         versionName Releases.versionName
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 
     lintOptions {
