--- a/config/dependencies/feature_dependencies.gradle
+++ b/config/dependencies/feature_dependencies.gradle
@@ -1,3 +1,12 @@
 apply plugin: 'com.android.library'
 apply from: "$rootDir/config/dependencies/android_dependencies.gradle"
-apply from: "$rootDir/config/dependencies/obfuscation_dependencies.gradle"
+
+android {
+    buildTypes {
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            consumerProguardFiles 'proguard-rules.pro'
+        }
+    }
+}
