--- a/features/tracker/build.gradle
+++ b/features/tracker/build.gradle
@@ -1,6 +1,14 @@
 apply from: "$rootDir/config/dependencies/dynamic_dependencies.gradle"
 
 dependencies {
+    implementation project(":libraries:core")
+    implementation project(":data:domain")
+
     implementation Deps.android.appCompat
     implementation Deps.android.material
+
+    implementation Deps.koin.viewModel
+
+    implementation Deps.rx.android
+    implementation Deps.rx.java
 }
