--- a/features/tracker/build.gradle
+++ b/features/tracker/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation project(":data:domain")
 
     implementation Deps.android.appCompat
+    implementation Deps.android.constraintLayout
     implementation Deps.android.material
 
     implementation Deps.koin.viewModel
