:white_check_mark: Add Unit Tests for TrackerViewModel
Unit tests added on presentation layer

--- a/features/tracker/build.gradle
+++ b/features/tracker/build.gradle
@@ -14,4 +14,8 @@ dependencies {
     implementation Deps.rx.java
 
     implementation Deps.mpAndroidChart
+
+    testImplementation Deps.test.junit
+    testImplementation Deps.test.mockk
+    testImplementation Deps.test.arch
 }
