:construction_worker: Update Travis CI config file
Config file updated to remove unneeded commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ android:
 jdk:
   - oraclejdk8
 script:
-  - ./gradlew clean cleanBuildCache build check test
+  - ./gradlew clean build
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
@@ -19,4 +19,4 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 before_install:
-- yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "platforms;android-28"
