:sparkles: Create Repository module
New Repository module created to handle the interaction between Domain
and the data source modules, Local and Remote (TBD)

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include ':features:preference'
 include ':features:tracker'
 include ':data:local'
 include ':data:domain'
+include ':data:repository'
