--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -16,6 +16,7 @@ android {
 
 dependencies {
     implementation project(":libraries:core")
+    implementation project(":data:repository")
 
     implementation Deps.koin.core
     implementation Deps.android.room.runtime
