:building_construction: Update Alarm module to use new Use Cases
Alarm module update to use the new Use Cases that depends on Repository
instead of Local directly

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation project(":libraries:navigation")
     implementation project(":libraries:splitInstall")
     implementation project(":data:local")
+    implementation project(":data:repository")
     implementation project(":data:domain")
     implementation project(":features:task")
     implementation project(":features:alarm")
