--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".presentation.MainActivity"
             android:label="@string/app_name"
             android:resizeableActivity="false"
             android:screenOrientation="portrait"
