--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-28.0.3
-    - android-28
+    - build-tools-29.0.2
+    - android-29
     - extra-android-m2repository
     - extra-google-m2repository
 jdk:
@@ -19,4 +19,5 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 before_install:
+  - yes | sdkmanager "platforms;android-29"
   - yes | sdkmanager "platforms;android-28"
