:recycle: Replace Category code from Rx to Coroutine
Observables updated to Suspend Functions
Tests updated
ViewModelScope added on ViewModels

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation Deps.android.room.runtime
     implementation Deps.android.navigation.fragment
     implementation Deps.android.navigation.ui
+    implementation Deps.android.lifecycle
     implementation Deps.android.playCore
 
     implementation Deps.timber
@@ -77,6 +78,8 @@ dependencies {
 
     implementation Deps.rx.android
     implementation Deps.rx.java
+
+    implementation Deps.coroutines.test
 
     testImplementation Deps.test.junit
     androidTestImplementation Deps.test.runner
