--- a/data/domain/build.gradle
+++ b/data/domain/build.gradle
@@ -14,7 +14,9 @@ dependencies {
     implementation Deps.koin.core
     implementation Deps.rx.java
     implementation Deps.rx.android
+    implementation Deps.coroutines.core
 
     testImplementation Deps.test.junit
     testImplementation Deps.test.mockk
+    testImplementation Deps.coroutines.test
 }
