--- a/config/dependencies/dynamic_dependencies.gradle
+++ b/config/dependencies/dynamic_dependencies.gradle
@@ -2,7 +2,8 @@ apply plugin: 'com.android.dynamic-feature'
 apply from: "$rootDir/config/dependencies/android_dependencies.gradle"
 
 dependencies {
-    implementation project(':app')
+    implementation project(":app")
+    androidTestImplementation project(":app")
 
     implementation Deps.android.playCore
 }
