--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath Deps.gradle.buildGradle
         classpath Deps.gradle.kotlinGradle
         classpath Deps.gradle.navigationSafeArgs
+        classpath Deps.gradle.googleServices
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
