:sparkles: Create new Memory module
New Memory module created to store temporary information. This module
has the intent of removing some code from the presentation layer.

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include ':features:preference'
 include ':features:tracker'
 include ':data:local'
 include ':data:domain'
+include ':data:memory'
 include ':data:repository'
