:heavy_plus_sign: Add LiveData Extensions dependency
LiveData Extensions added
Lifecycle and Coroutines updated

--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation Deps.android.material
     implementation Deps.android.navigation.fragment
     implementation Deps.android.navigation.ui
+    implementation Deps.android.lifecycle.extensions
     implementation Deps.android.lifecycle.viewmodel
     implementation Deps.android.lifecycle.runtime
     implementation Deps.android.playCore
