:lipstick: Update Task Detail UI to show when it is completed
New UI state created
I'm so happy using TDD!

--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -25,4 +25,8 @@ dependencies {
     implementation Deps.android.playCore
 
     implementation Deps.koin.viewModel
+
+    testImplementation Deps.test.junit
+    testImplementation Deps.test.mockk
+    testImplementation Deps.test.arch
 }
