:lipstick: Add a new menu button to change completed status
New button added to toggle between completed and uncompleted
Toast describing the action added
New tests added

--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation project(":libraries:navigation")
     implementation project(":data:domain")
 
+    testImplementation project(":libraries:test")
+
     implementation Deps.android.constraintLayout
     implementation Deps.android.material
     implementation Deps.android.navigation.fragment
@@ -26,7 +28,6 @@ dependencies {
 
     implementation Deps.koin.viewModel
 
-    testImplementation Deps.test.junit
     testImplementation Deps.test.mockk
     testImplementation Deps.test.arch
 }
