:recycle: Remove Data Binding from Task List
Data Binding removed from this screen

--- a/features/task/build.gradle
+++ b/features/task/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 
     implementation Deps.koin.viewModel
 
+    implementation Deps.groupie.core
+    implementation Deps.groupie.ktx
+
     testImplementation Deps.test.mockk
     testImplementation Deps.test.arch
 }
