--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name="com.escodro.alkaa.presentation.ComposeActivity"
-            android:label="@string/title_activity_compose"
+            android:name="com.escodro.alkaa.presentation.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
