--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include ':libraries:core'
 include ':libraries:test'
 include ':libraries:navigation'
 include ':libraries:splitInstall'
+include ':libraries:theme'
 include ':features:alarm'
 include ':features:task'
 include ':features:category'
