:truck: Move all Compose Style code to Theme module
Now all the Compose base style for Alkaa App Theme is now in a common
package to be used by other modules as well.
Also, some Gradle changes were needed to make Compose run in the new
module.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "1.0.0-alpha02"
-        kotlinCompilerVersion "1.4.0"
+        kotlinCompilerExtensionVersion Versions.compose
+        kotlinCompilerVersion Versions.kotlin
     }
 
     kapt {
