:lipstick: Update theming
Based on @nickbutcher help, code was updated to use theme references
instead of accessing the values directly.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
+        android:theme="@style/Theme.Alkaa"
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
             android:name="com.escodro.alkaa.presentation.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/Theme.Alkaa">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
