:white_check_mark: Create a new UI test
New test created to validate if the top bar title matches the bottom
bar selected icon.
In order to make the test possible (and help users), accessibility
description was added in the icons.

--- a/config/dependencies/compose_dependencies.gradle
+++ b/config/dependencies/compose_dependencies.gradle
@@ -13,4 +13,5 @@ dependencies {
     implementation Deps.compose.ui
     implementation Deps.compose.material
     implementation Deps.compose.tooling
+    androidTestImplementation Deps.compose.uiTest
 }
