:arrow_up: Upgrade Detekt dependency
Upgrade Detekt dependency and fixed the new errors and warning.
This upgrade is needed to correctly supports Jetpack Compose new rules.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:resizeableActivity="false"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"
-            tools:ignore="UnusedAttribute">
+            tools:ignore="LockedOrientationActivity,NonResizeableActivity,UnusedAttribute">
 
             <nav-graph android:value="@navigation/nav_graph_tracker" />
 
