:green_heart: Fix quality issues
Changes added to fix new quality checker issues from latest versions

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -12,6 +12,8 @@ comments:
 style:
   DataClassShouldBeImmutable:
     active: false
+  MagicNumber:
+    excludes: ['**/theme/*.kt', '**/test/**','**/androidTest/**']
 
 potential-bugs:
   UnsafeCallOnNullableType:
