--- a/libraries/test/build.gradle
+++ b/libraries/test/build.gradle
@@ -1,5 +1,12 @@
 apply from: "$rootDir/config/dependencies/feature_dependencies.gradle"
 
+android {
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+    }
+}
+
 dependencies {
     implementation project(":libraries:core")
 
